@Query and @NativeQuery demo